overlapping tweets fix

--- a/client/src/components/Tweets/Tweets.css
+++ b/client/src/components/Tweets/Tweets.css
@@ -1,16 +1,9 @@
 .carousel-container{
-    /* padding-left: 1em; */
-    /* padding-right: 1em; */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)
 }
 
-.tweets{
-    width: 300px;
-    height: 500px;
-    
-}
 
 .tweets iframe{
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
